# Chess

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  boardIndices.txt  compile_commands.json  main.cpp  test positions.txt
resources/: resources.qrc
src/: Chess.java  ChessGame.java  Game.java  MatchMaker.java  board.cpp  board.h  counter.cpp  counter.h  main.cpp  move.cpp  move.h  moveGenerator.cpp  moveGenerator.h  piece.cpp  piece.h  precomputedGameData.cpp  precomputedGameData.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h
src/board/: Board.java  Move.java  Piece.java
src/engines/: Counter.java  Engine.java  Greedy.java  GreedyPruning.java  Random.java  Thinker.java  ThinkerOptimized.java  ThinkerUnoptimized.java  counter.cpp  counter.h  engine.h  engineRegistry.h
src/engines/greedy/: greedy.cpp  greedy.h
src/engines/random/: random.cpp  random.h
src/game/: Board.java  BoardState.java  Move.java  Piece.java  PrecomputedGameData.java
src/gui/: ChessGUI.java  DialogPane.java  GamePane.java  GamePanel.java  OptionsPane.java  boardWidget.h  chess.cpp  chess.h  dialogWidget.cpp  dialogWidget.h  engineWorker.cpp  engineWorker.h  gameWidget.cpp  gameWidget.h  optionsWidget.cpp  optionsWidget.h  squareGridLayout.h  style.css
src/gui/controllers/: boardController.cpp  boardController.h  gameController.cpp  gameController.h
src/gui/views/: BoardPanel.qml  ChessBoard.qml  ChessButton.qml  ChessComboBox.qml  ChessTextField.qml  DialogPanel.qml  DialogTextBlock.qml  MainWindow.qml  OptionsPanel.qml  PieceSprite.qml
src/util/: precomputedGameData.cpp  precomputedGameData.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h
src/utils/: FunctionTimer.java  MoveGenerator.java  StockFish.java  Utils.java  Zobrist.java
